# udp

./: .gitignore  CMakeLists.txt
include/: epoll.h  lnx_udp.h
src/: CMakeLists.txt  client.c  epoll.c  lnx_udp.c  main.c
tools/armv5l/: arm-linux-gnueabi-ar  arm-linux-gnueabi-g++  arm-linux-gnueabi-gcc  arm-linux-gnueabi-ld  arm-linux-gnueabi-nm  arm-linux-gnueabi-objdump  arm-linux-gnueabi-ranlib
tools/armv5l/lib/: libc
